--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,6 +57,13 @@ jobs:
       #   if: runner.os == 'macOS'
       #   run: flutter build ios --no-codesign
 
+      # Upload APK
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-artifacts
+          path: build/app/outputs/flutter-apk/app-release.apk
+
   release:
     runs-on: ubuntu-latest
     needs: build
