--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,6 @@ on:
 jobs:
   build:
     name: Test and Build
-    if: github.event_name == 'push' || github.event.pull_request.merged == false
     runs-on: ubuntu-latest
 
     defaults:
@@ -28,6 +27,24 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.32.6'
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
       # Install dependencies
       - name: Install dependencies
@@ -67,6 +84,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.ref == 'refs/heads/main'
     needs: build
     permissions:
       contents: write
