--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,24 @@ jobs:
         with:
           flutter-version: '3.32.6'
 
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       # Install dependencies
       - name: Install dependencies
         run: flutter pub get
@@ -67,6 +85,8 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.ref == 'refs/heads/main'
+
     needs: build
     permissions:
       contents: write
@@ -100,7 +120,6 @@ jobs:
           name: "v${{ steps.get_version.outputs.version }}"
           body: "Automated release generated from pubspec.yaml"
           files: |
-            release-files/app-release.apk
-            release-files/release-artifacts.zip
-            release-files/release-artifacts.tar.gz
-
+            release-files/app-release-v${{ steps.version.outputs.version }}.apk
+            release-files/release-artifacts-v${{ steps.version.outputs.version }}.zip
+            release-files/release-artifacts-v${{ steps.version.outputs.version }}.tar.gz
