--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -37,12 +37,30 @@ jobs:
           git tag -f "$TAG"
           git push origin "$TAG" --force
 
+      - name: Get PR description
+        id: pr
+        uses: actions-ecosystem/action-get-merged-pull-request@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract release notes
+        id: extract_notes
+        run: |
+          PR_BODY="${{ steps.pr.outputs.body }}"
+          NOTES=$(echo "$PR_BODY" | sed -n '/## Release Notes/,/## /p' | sed '1d;$d' || true)
+          [ -z "$NOTES" ] && NOTES="No release notes provided."
+          echo "notes<<EOF" >> $GITHUB_OUTPUT
+          echo "$NOTES" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.get_version.outputs.version }}
           name: "v${{ steps.get_version.outputs.version }}"
-          body: "Automated release generated from pubspec.yaml"
+          body: |
+            ## Release Notes
+            ${{ steps.extract_notes.outputs.notes }}
           files: |
             release-files/app-release-v${{ steps.version.outputs.version }}.apk
             release-files/release-artifacts-v${{ steps.version.outputs.version }}.zip
