--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,12 @@
 name: Flutter CI
 
 on:
-  push:
+  #  push:
+  #    branches:
+  #      - main
+  pull_request:
     branches:
       - main
-#  pull_request:
-#    branches:
-#      - main
 
 jobs:
   build:
