Automatization release note from PR Template (#10)
* chore: update .gitignore to ignore previous apps

* feat: add startscreen basic logic

* chore: add ci rules

* feat: roll_dice/ project

* refactor: update path ci.yaml rules

* delete: roll_dice_app

* chore: add ci rules

* chore: add ci rule to auto-update release tag and files

* version: 1.0.0rc-1 - test auto-release

* chore: add ci rule to auto-update release tag and files

* fix: ci.yaml add path to store flutter build apk

* fix: path from app-release.apk

* fix: conditional to avoid rebuild after merged

* chore: add status badge for workflow

* version: 1.0.0-rc2 - fix auto-release

* refactor: add cache for dependencies

* version: 1.0.0-rc3 - improve auto-release

* docs: add flutter tag to README

* ci: update naming for release-files

* ci: commented tag release logic

* ci: added new logic for release tag

* ci: added PR template to be used in release message body

* ci: add logic to grab PR notes to Release body

* ci: fix rule to run ci.yaml on PR

* ci: fix rule to build project

* ci: fix flutter version

--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -1,6 +1,5 @@
 name: ci-release
 
-
 on:
   push:
     branches:
@@ -20,12 +19,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-
       # Install Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.22.6 # match your version
+          flutter-version: '3.32.6'
 
       - name: Install dependencies
         run: flutter pub get
@@ -40,19 +38,11 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: release-artifacts
-          path: release-files
-
-
       - name: Extract version from pubspec.yaml
         id: get_version
         run: |
           VERSION=$(grep '^version:' quiz_app/pubspec.yaml | awk '{print $2}')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-
 
       - name: Rename artifacts
         run: |
@@ -60,7 +50,6 @@ jobs:
           cp build/app/outputs/flutter-apk/app-release.apk release-files/app-release-v${{ steps.get_version.outputs.version }}.apk
           cp build/app/outputs/flutter-apk/app-release.apk release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.zip
           cp build/app/outputs/flutter-apk/app-release.apk release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.tar.gz
-
 
       - name: Create or update release tag
         run: |
