--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -28,10 +28,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Decode google-services.json
+      - name: Set up google-services.json
         run: |
           mkdir -p android/app
-          echo "$GOOGLE_SERVICES_JSON" | base64 --decode > android/app/google-services.json
+          echo "${GOOGLE_SERVICES_JSON}" > android/app/google-services.json
+
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
