--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -1,4 +1,4 @@
-name: ci-release
+name: Release CI
 
 on:
   push:
@@ -6,38 +6,76 @@ on:
       - main
 
 jobs:
-  release:
+  build:
+    name: Test and Build
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     defaults:
       run:
         working-directory: quiz_app
 
     steps:
+      # Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install Flutter
+      # Set up Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.32.6'
 
+      # Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
+      # Decode and place google-services.json
       - name: Set up google-services.json
         run: |
           mkdir -p android/app
           echo "${GOOGLE_SERVICES_JSON}" > android/app/google-services.json
-
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
+      # Analyze the code
+      - name: Analyze code
+        run: flutter analyze
+
+      # Run tests
+      - name: Run tests
+        run: flutter test
+
+      # (Optional) Build APK for Android
       - name: Build APK
         run: flutter build apk --release
+
+      # (Optional) Build for iOS (only works on macOS runners)
+      # - name: Build iOS
+      #   if: runner.os == 'macOS'
+      #   run: flutter build ios --no-codesign
+
+      # Upload APK
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-artifacts
+          path: quiz_app/build/app/outputs/flutter-apk/app-release.apk
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: release-artifacts
+          path: release-files
 
       - name: Extract version from pubspec.yaml
         id: get_version
@@ -45,25 +83,7 @@ jobs:
           VERSION=$(grep '^version:' quiz_app/pubspec.yaml | awk '{print $2}')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Rename artifacts
-        run: |
-          mkdir -p release-files
-          cp build/app/outputs/flutter-apk/app-release.apk release-files/app-release-v${{ steps.get_version.outputs.version }}.apk
-          cp build/app/outputs/flutter-apk/app-release.apk release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.zip
-          cp build/app/outputs/flutter-apk/app-release.apk release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.tar.gz
-
-      - name: Create or update release tag
-        run: |
-          TAG="${{ steps.get_version.outputs.version }}"
-          git tag -f "$TAG"
-          git push origin "$TAG" --force
-
-      - name: Get PR description
-        id: pr
-        uses: actions-ecosystem/action-get-merged-pull-request@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
+      # Extract release notes
       - name: Extract release notes
         id: extract_notes
         run: |
@@ -74,6 +94,12 @@ jobs:
           echo "$NOTES" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
+      - name: Create or update release tag
+        run: |
+          TAG="${{ steps.get_version.outputs.version }}"
+          git tag -f "$TAG"
+          git push origin "$TAG" --force
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
@@ -83,6 +109,6 @@ jobs:
             ## Release Notes
             ${{ steps.extract_notes.outputs.notes }}
           files: |
-            release-files/app-release-v${{ steps.get_version.outputs.version }}.apk
-            release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.zip
-            release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.tar.gz
+            release-files/app-release.apk
+            release-files/release-artifacts.zip
+            release-files/release-artifacts.tar.gz
