--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -1,4 +1,4 @@
-name: Flutter CI
+name: Auto Release
 
 on:
   push:
@@ -64,6 +64,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
+    name: Release
     permissions:
       contents: write
 
@@ -88,7 +89,7 @@ jobs:
         id: extract_notes
         run: |
           PR_BODY="${{ steps.pr.outputs.body }}"
-          NOTES=$(echo "$PR_BODY" | sed -n '/## Release Notes/,/## /p' | sed '1d;$d' || true)
+          NOTES=$(echo "$PR_BODY" | awk '/## Release Notes/{flag=1; next} /^## /{flag=0} flag' | sed '/^\s*$/d' || true)
           [ -z "$NOTES" ] && NOTES="No release notes provided."
           echo "notes<<EOF" >> $GITHUB_OUTPUT
           echo "$NOTES" >> $GITHUB_OUTPUT
@@ -109,6 +110,6 @@ jobs:
             ## Release Notes
             ${{ steps.extract_notes.outputs.notes }}
           files: |
-            release-files/app-release.apk
-            release-files/release-artifacts.zip
-            release-files/release-artifacts.tar.gz
+            release-files/app-release-v${{ steps.get_version.outputs.version }}.apk
+            release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.zip
+            release-files/release-artifacts-v${{ steps.get_version.outputs.version }}.tar.gz
